# ChatVRM

./: .eslintrc.cjs  .prettierrc  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: assistantText.tsx  chatLog.tsx  githubLink.tsx  iconButton.tsx  introduction.tsx  link.tsx  menu.tsx  messageInput.tsx  messageInputContainer.tsx  meta.tsx  settings.tsx  textButton.tsx  vrmViewer.tsx
src/features/chat/: openAiChat.ts
src/features/constants/: koeiroParam.ts  systemPromptConstants.ts
src/features/emoteController/: autoBlink.ts  autoLookAt.ts  emoteController.ts  expressionController.ts
src/features/image/: openAiImage.ts
src/features/koeiromap/: koeiromap.ts
src/features/messages/: messages.ts  speakCharacter.ts
src/features/vrmViewer/: model.ts  viewer.ts  viewerContext.ts
src/lib/VRMAnimation/: VRMAnimation.ts  VRMAnimationLoaderPlugin.ts  loadVRMAnimation.ts
src/lib/VRMLookAtSmootherLoaderPlugin/: VRMLookAtSmoother.ts  VRMLookAtSmootherLoaderPlugin.ts
src/pages/: _app.tsx  _document.tsx  index.tsx
src/pages/api/: chat.ts  tts.ts
src/utils/: wait.ts
